mw-pihole.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata: 
  name: prefixstrip-pihole
spec: 
  stripPrefix:
    prefixes:
      - /pihole
    forceSlash: false
