service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  type: ClusterIP
  ports:
  - name: pihole-webui
    port: 80
    targetPort: 80
    protocol: TCP
  - name: pihole-dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  - name: pihole-dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
